# godot-bevy

./: CLAUDE.md  Cargo.toml  README.md
book/src/: SUMMARY.md
book/src/getting-started/: basic-concepts.md  plugins.md
book/src/migration/: v0.7-to-v0.8.md
book/src/scene-tree/: custom-nodes.md
examples/avian-physics-demo/: README.md
examples/avian-physics-demo/godot/: export_presets.cfg  icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
examples/avian-physics-demo/godot/scenes/: bevy_app_singleton.tscn  floor.tscn  main.tscn  simple_box.tscn
examples/avian-physics-demo/rust/: Cargo.toml
examples/avian-physics-demo/rust/src/: lib.rs
examples/boids-perf-test/: baseline.json
examples/boids-perf-test/godot/scenes/: main.tscn
examples/boids-perf-test/godot/scripts/: benchmark_cli.gd  godot_boids.gd
examples/boids-perf-test/rust/src/: bevy_boids.rs  lib.rs
examples/dodge-the-creeps-2d/rust/src/: lib.rs  main_menu.rs
examples/input-event-demo/rust/src/: godot_input.rs  lib.rs
examples/platformer-2d/rust/src/: level_manager.rs
examples/simple-node2d-movement/rust/src/: lib.rs
godot-bevy-macros/src/: lib.rs
godot-bevy/src/: app.rs  lib.rs  prelude.rs
godot-bevy/src/interop/: godot_node_handle.rs  godot_resource_handle.rs  mod.rs  node_markers.rs  utils.rs
godot-bevy/src/plugins/: assets.rs  collisions.rs  core.rs  mod.rs  packed_scene.rs  signals.rs
godot-bevy/src/plugins/audio/: output.rs  plugin.rs
godot-bevy/src/watchers/: collision_watcher.rs  input_watcher.rs  mod.rs  scene_tree_watcher.rs
(+13 files in other folders)
